--- a/main.css
+++ b/main.css
@@ -67,8 +67,8 @@ footer {
    margin: 50px; 
    border: 2px solid orange;  
    padding: 15px;
-   align-content: stretch; 
-
+   align-content: center; 
+   font-size: 26px;
 }
 
 #blog1 {
@@ -77,6 +77,7 @@ footer {
     background-color:   #3578E5;
     display: inline;
     color: white;
+    
 }
 
 #sport-image {
